# Kursch

./: Authorization.ui  CMakeLists.txt  authorization.cpp  authorization.h  authorization.ui  main.cpp  mainwindow.h  mainwindow.ui  resource.qrc
